--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -14,7 +14,16 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       crossorigin="anonymous"
     />
-
+    <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i)
+          {w[l]=w[l]||[];w[l].push({
+            'gtm.start':
+                new Date().getTime(),event:'gtm.js'
+          });var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+              'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MHF867FZ');</script>
+  <!-- End Google Tag Manager -->
     <title>{% block title %}Home{% endblock %}</title>
   </head>
   <body>
@@ -87,5 +96,10 @@
   }
 </script>
 {% endblock %}
+
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MHF867FZ" height="0" width="0" 
+      style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
   </body>
 </html>
