--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -97,6 +97,12 @@
 </script>
 {% endblock %}
 
+  <main class="container-lg pt-4">
+    <a class="twitter-share-button" target="_blank"
+      href="https://twitter.com/sepkil_shox/status/1728485790920143350">
+    <i></i><span>Tweet</span></a>
+  </main>
+
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MHF867FZ" height="0" width="0" 
       style="display:none;visibility:hidden"></iframe></noscript>
